--- a/proc/Cargo.toml
+++ b/proc/Cargo.toml
@@ -1,15 +1,16 @@
 [package]
-name = "proc"
+name = "codespan-derive-proc"
 version = "0.1.0"
 authors = ["Michael Goulet <michael@errs.io>"]
 edition = "2018"
+license = "MIT"
+description = "derive(IntoDiagnostic) implementation"
 
 [lib]
 proc-macro = true
 
 [dependencies]
-synstructure = "0.12.4"
-proc-macro2 = "1.0.21"
-syn = "1.0.41"
+proc-macro2 = "1.0.28"
 quote = "1.0.9"
-proc-macro2-diagnostics = "0.9"
+syn = "1.0.75"
+synstructure = "0.12.5"
